--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -3,3 +3,12 @@ body {
     margin: 0;
     padding: 0;
   }
+  
+  h1 {
+    background-color: #4CAF50;
+    color: white;
+    padding: 20px;
+    text-align: center;
+  }
+  
+  
