--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -1,12 +1,15 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
   
   h1 {
-    background-color: #4CAF50;
-    color: white;
     padding: 20px;
     text-align: center;
   }
@@ -15,8 +18,16 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     max-width: 400px;
     margin: 50px auto;
+    padding: 50px 100px;
+    border-radius: 10px;
+    background: rgba( 227, 227, 237, 0.45 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 8.5px );
+    -webkit-backdrop-filter: blur( 8.5px );
+    border: 1px solid rgba( 255, 255, 255, 0.18 );;
   }
   
   label {
@@ -27,25 +38,48 @@ body {
   input[type="password"],
   textarea {
     width: 100%;
-    padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    font-size: 15px;
+	  padding: 8px 15px;
+	  outline: none;
+	  background: #F9F9F9;
+	  color: #4A4A4A;
+	  border: 1px solid #ABA8EB;
+	  border-radius: 10px;
+	  box-shadow: 1px 0px 25px -3px #D3D3D3;
+	  transition: .3s ease;
+  }
+
+  input:focus {
+    background: #F9F9F9;
+    border: 1px solid #9C8BCA;
+    border-radius: 5px;
+  }
+
+  .input::placeholder {
+    color: #b8b8b87e;
   }
   
   input[type="file"] {
     margin-bottom: 20px;
   }
   
-  button[type="submit"] {
-    background-color: #4CAF50;
-    color: white;
-    padding: 10px 20px;
+  input[type="submit"] {
+    font-family: arial;
+    font-weight: bold;
+    color: #FFFFFF;
+    font-size: 13px;
+    box-shadow: 1px 1px 10px #5D6F7A;
+    padding: 10px 16px;
+    border-radius: 10px;
     border: none;
-    border-radius: 4px;
+    background: #AC82FF;
+    background: linear-gradient(to top, #AC82FF, #9176CF);
     cursor: pointer;
+    transition: .3s ease;
   }
-  
-  button[type="submit"]:hover {
-    background-color: #45a049;
+
+  input[type="submit"]:hover {
+    background: #672E69;
+    background: linear-gradient(to top, #8a82ff, #9176CF);
   }
