--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -12,7 +12,7 @@ body {
 }
   
   h1 {
-    padding: 20px;
+    margin-top: 5px;
     text-align: center;
   }
   
@@ -35,10 +35,15 @@ body {
   label {
     margin-bottom: 10px;
   }
+
+  textarea {
+    height: 100px;
+  }
   
   input[type="text"],
   input[type="password"],
   textarea {
+    font-family: "Rubik", sans-serif;
     width: 100%;
     margin-bottom: 20px;
     font-size: 15px;
@@ -94,4 +99,29 @@ body {
   }
   
 
-  
+  @media (max-width: 600px) {
+    form {
+      max-width: 60%;
+      padding: 50px;
+    }
+
+    input[type="text"],
+    input[type="password"],
+    textarea {
+      font-size: 13px;
+      padding: 6px 10px;
+    }
+
+    input[type="file"] {
+      max-width: 60%;
+    }
+  }
+
+  @media (max-width: 300px) {
+
+    form {
+      border: none;
+      box-shadow: none;
+      background: none;
+    }
+  }
