--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -9,6 +9,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+  background-image: url("https://images.pexels.com/photos/7130555/pexels-photo-7130555.jpeg?cs=srgb&dl=pexels-codioful-%28formerly-gradienta%29-7130555.jpg&fm=jpg");
 }
   
   h1 {
@@ -117,7 +118,7 @@ body {
     }
   }
 
-  @media (max-width: 300px) {
+  @media (max-width: 370px) {
 
     form {
       border: none;
