--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mail Sender</title>
   <link rel="stylesheet" href="/static/styles.css">
+  <link rel="shortcut icon" href="/src/static/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
